# vtuber

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  pyproject.toml
docs/: system-prompt.md
docs/plans/: 2026-03-05-daemon-architecture-design.md  2026-03-05-daemon-architecture.md  2026-03-06-onboarding-redesign-design.md  2026-03-06-onboarding-redesign.md  2026-03-07-skills-mcp-design.md  2026-03-08-memory-system-refactor-design.md  2026-03-08-memory-system-refactor-implementation.md  2026-03-13-codebase-hardening.md
scripts/: migrate_memory.py
src/vtuber/: __init__.py  config.py  main.py  onboarding.py  permissions.py  persona.py  session.py  templates.py  utils.py
src/vtuber/client/: cli.py
src/vtuber/config/: __init__.py  model.py  paths.py  yaml_gen.py
src/vtuber/daemon/: agent_query.py  agents.py  cli.py  gateway.py  heartbeat.py  protocol.py  scheduler.py  server.py  streaming.py  tasks.py
src/vtuber/interface/: __init__.py  base.py  cli.py
src/vtuber/plugins/: README.md
src/vtuber/providers/: __init__.py  base.py  cli.py  files.py  mock_group.py  onebot.py  render.py
src/vtuber/providers/napcat/: __init__.py  provider.py
src/vtuber/providers/onebot/: __init__.py  events.py  message.py  provider.py  render.py
src/vtuber/tools/: __init__.py  _helpers.py  heartbeat.py  lifecycle.py  memory.py  schedule.py  skills.py  web.py
tests/: test_config.py  test_persona_markdown.py  test_sdk.py  test_session.py  test_session_manager.py  test_skills.py
tests/daemon/: test_protocol.py  test_scheduler.py  test_server.py
(+10 files in other folders)
