[project]
name = "vtuber"
version = "0.1.0"
description = "A digital life agent powered by Claude Agent SDK"
readme = "README.md"
authors = [
    { name = "FrostMiKu", email = "i@frostmiku.com" }
]
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.45",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
vtuber = "vtuber.main:main"
vtuber-daemon = "vtuber.daemon.server:main"
vtuber-cli = "vtuber.client.cli:main"
